--- a/liquid_eng/Cargo.toml
+++ b/liquid_eng/Cargo.toml
@@ -18,6 +18,7 @@ glow = "0.11.2"
 glutin = "0.30.2"
 raw-window-handle = "0.4.2"
 once_cell = "1.16.0"
+winit = "0.27.0"
 uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics" ] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
