--- a/liquid_eng/Cargo.toml
+++ b/liquid_eng/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Petri Bayley <petribayley@gmail.com>"]
 crate-type = ["dylib"]
 edition = "2021"
 
+[metadata]
+resolver = "2"
+
 [lib]
 name = "liquid_eng"
 crate-type = ["rlib", "dylib"]
@@ -13,23 +16,9 @@ crate-type = ["rlib", "dylib"]
 log4rs = "1.2.0"
 serde_yaml = "0.9.14"
 log = "0.4.17"
-erupt = "0.23.0"
 glow = "0.11.2"
 glutin = "0.30.2"
-raw-window-handle = "0.4.2"
 once_cell = "1.16.0"
 winit = "0.27.0"
+wgpu = "0.14.2"
 uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics" ] }
-
-[target.'cfg(target_os = "macos")'.dependencies]
-objc = "0.2"
-
-[target.'cfg(target_os = "windows")'.dependencies]
-windows = { version = "0.43.0", features = [
-    "Data_Xml_Dom", 
-    "Win32_Foundation", 
-    "Win32_Security", 
-    "Win32_System_Threading", 
-    "Win32_UI_WindowsAndMessaging", 
-    "Win32_System_LibraryLoader", 
-    "Win32_Graphics_Gdi"] }
